# funcall

./: Cargo.toml  LICENSE  README.md
crates/funcall/: Cargo.toml  README.md
crates/funcall/examples/: demo.rs
crates/funcall/src/: lib.rs
crates/funcall_macros/: Cargo.toml  README.md
crates/funcall_macros/src/: lib.rs
