[package]
name = "funcall"
version = "0.2.0"
edition = "2024"
authors = ["luckywood <morrisliu1994@outlook.com>"]
description = "A lightweight Rust library that turns functions into JSON-callable tools"
license = "MIT"
repository = "https://github.com/realmorrisliu/funcall"
homepage = "https://github.com/realmorrisliu/funcall"
documentation = "https://docs.rs/funcall"
readme = "README.md"
keywords = ["macro", "function-call", "ai"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
funcall-macros = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paste = "1.0"
